[package]
name = "miniscript-doge"
version = "5.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>, Sanket Kanjalkar <sanket1729@gmail.com>"]
repository = "https://github.com/apoelstra/miniscript"
description = "Miniscript: a subset of Bitcoin Script designed for analysis"
license = "CC0-1.0"

[features]
fuzztarget = ["dogecoin/fuzztarget"]
compiler = []
trace = []
unstable = []
default = []
use-serde = ["dogecoin/use-serde", "serde"]
rand = ["dogecoin/rand"]

[dependencies.dogecoin]
git = "https://github.com/tobin-crypto/rust-dogecoin"

[dependencies.serde]
version = "1.0"
optional = true

[[example]]
name = "htlc"
required-features = ["compiler"]

[[example]]
name = "parse"

[[example]]
name = "sign_multisig"

[[example]]
name = "verify_tx"

[[example]]
name = "psbt"

[[example]]
name = "xpub_descriptors"
